点赞后端完成

--- a/src/main/resources/templates/client/articleDetails.html
+++ b/src/main/resources/templates/client/articleDetails.html
@@ -59,6 +59,9 @@
             like_num = like_num + 1;
             $('.like-num').html(like_num);
             $('.like-icon').attr('data-key', '');
+            $.ajax({
+                url:""
+            })
         } else {
             $('.like-icon').removeClass('on');
             like_num = like_num - 1;
