--- a/src/main/resources/templates/client/header.html
+++ b/src/main/resources/templates/client/header.html
@@ -22,8 +22,7 @@
     <script th:src="@{/back/js/respond.min.js}"></script>
     <![endif]-->
 </head>
-<body  gtools_scp_screen_capture_injected="true" th:class="${is_post}?'':'bg-
-'">
+<body  gtools_scp_screen_capture_injected="true" th:class="${is_post}?'':'bg-'">
 <!--[if lt IE 8]>
 <div class="browsehappy" role="dialog">
     当前网页 <strong>不支持</strong> 你正在使用的浏览器. 为了正常的访问, 请 <a href="http://browsehappy.com/" target="_blank">升级你的浏览器</a>。
