--- a/src/main/resources/templates/client/articleDetails.html
+++ b/src/main/resources/templates/client/articleDetails.html
@@ -13,7 +13,7 @@
 <article class="main-content post-page">
     <div class="post-header">
         <h1 class="post-title" itemprop="name headline" th:text="${article.title}"></h1>
-        <a class="article-id" th:text="${article.id}"></a>
+        <a class="article-id" th:text="${article.id}" hidden></a>
         <div class="post-data">
             <time th:datetime="${commons.dateFormat(article.created)}" itemprop="datePublished" th:text="'发布于 '+ ${commons.dateFormat(article.created)}"></time>
         </div>
