--- a/src/main/resources/templates/comm/login.html
+++ b/src/main/resources/templates/comm/login.html
@@ -55,7 +55,7 @@
     </div>
 
     <footer class="log-footer">
-        <p style="margin: 30px; color: #2E2D3C"><time class="comment-time" th:text="${#dates.format(new java.util.Date().getTime(), 'yyyy')}"></time> &copy; Powered By <a style="color: #0e90d2" rel="nofollow">CrazyStone</a></p>
+        <p style="margin: 30px; color: #2E2D3C"><time class="comment-time" th:text="${#dates.format(new java.util.Date().getTime(), 'yyyy')}"></time> &copy; Powered By <a style="color: #0e90d2" rel="nofollow">Ruiqi</a></p>
     </footer>
 </div>
 </body>
